syntax = "proto3";

package proto;

option go_package = "maily/proto";

message Email {
  int64 id = 1;
  string email = 2;
  int64 confirmed_at = 3;
  bool opt_out = 4;
} 

message CreateEmailRequest { string email_address = 1; }
message GetEmailRequest { int64 id = 1; }
message GetAllRequest {}
message GetBatchRequest { int32 limit = 1;int32 offset = 2; }
message UpdateEmailRequest { int64 id = 1; bool opt_out = 2; }
message DeleteEmailRequest { int64 id = 1; }
message DeleteUnsubscribedRequest {}
message DeleteUnsubscribedBeforeRequest { int64 date = 1; }

message EmailResponse { optional Email email = 1; }
message EmailBatchResponse { repeated Email emails = 1; }

service Manage {
  rpc CreateEmail(CreateEmailRequest) returns (EmailResponse) {}
  rpc GetEmail(GetEmailRequest) returns (EmailResponse) {}
  rpc GetAll(GetAllRequest) returns (EmailBatchResponse) {}
  rpc GetAllSubscribed(GetAllRequest) returns (EmailBatchResponse) {}
  rpc GetBatchSubscribed(GetBatchRequest) returns (EmailBatchResponse) {}
  rpc GetBatch(GetBatchRequest) returns (EmailBatchResponse) {}
  rpc UpdateEmail(UpdateEmailRequest) returns (EmailResponse) {}
  rpc DeleteEmail(DeleteEmailRequest) returns (EmailResponse) {}
  rpc DeleteUnsubscribed(DeleteUnsubscribedRequest) returns (EmailBatchResponse) {}
  rpc DeleteUsubscribedBefore(DeleteUnsubscribedBeforeRequest) returns(EmailBatchResponse) {}
}
